--- a/index.html
+++ b/index.html
@@ -1,4 +1,51 @@
-<head></head>
+<!--
+ ## Portfolio HTML
+-->
+
+<!DOCTYPE html>
+<html lang="en-us">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
 <body>
-<h1> Hello World </h1>
+
+    <section id="logo">
+        Gerardo Laracuente
+    </section>
+
+    <section id="contact">
+        Contact
+    </section>
+
+    <div class="vl"></div>
+
+    <section id="portfolio">
+        Portfolio
+    </section>
+
+    <div class="vl"></div>
+
+    <section id="about">
+        About
+    </section>
+
+    <section id="full" class="clearfix">
+        <header>
+            About Me</header>
+        <hr>
+        <img id="about-pic" src="assets/images/gerry_pic.png" alt="about-me-pic">
+        <p>This is the paragraph about myself.</p>
+
+    </section>
+
+    <footer>
+        Copyright
+    </footer>
+
 </body>
+
+</html>
