--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-<<<<<<< HEAD
-
 <!DOCTYPE html>
 <html lang="en-us">
 
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio</title>
+    <title>glaracuente git.io page</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<a href="https://glaracuente.github.io/myprojects/">MY PROJECTS</a>
+    <div class="links">
+        <a href="https://glaracuente.github.io/myprojects/">MY PROJECTS</a></div>
 </body>
 
 </html>
