--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
+
+        
 <!DOCTYPE html>
 <html lang="en-us">
 
 <head>
     <meta charset="UTF-8">
-    <title>glaracuente git.io page</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <title>GLaracuente IO</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <div class="links">
-        <a href="https://glaracuente.github.io/myprojects/">MY PROJECTS</a></div>
+    <section>
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" id="rutgers" src="rutgers.png" alt="rutgers">
+            <div class="card-body">
+                <h5 class="card-title">Full Stack Web Development Projects</h5>
+                <p class="card-text"></p>
+                <a href="https://glaracuente.github.io/myprojects/" class="btn btn-primary">Check it out</a>
+            </div>
+        </div>
+    </section>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
