--- a/index.html
+++ b/index.html
@@ -1,35 +1,43 @@
-
-        
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>GLaracuente IO</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <title>GLaracuente</title>
 </head>
 
 <body>
-    <section>
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" id="rutgers" src="rutgers.png" alt="rutgers">
-            <div class="card-body">
-                <h5 class="card-title">Full Stack Web Development Projects</h5>
-                <p class="card-text"></p>
-                <a href="https://glaracuente.github.io/myprojects/" class="btn btn-primary">Check it out</a>
-            </div>
+    <div id="container">
+        <div id="left-bar">
+            <img id="profile-pic" src="assets/images/profile_pic.png">
+            <ul>
+                <li><i class="fas fa-home"></i><span class="nav-item">Home</span></li>
+                <hr>
+                <li><i class="fas fa-user"></i><span class="nav-item">About Me</span></li>
+                <hr>
+                <li><i class="fas fa-file"></i><span class="nav-item">Resume</span></li>
+                <hr>
+                <li><i class="fas fa-suitcase"></i><span class="nav-item">Portfolio</span></li>
+                <hr>
+                <li><i class="fab fa-blogger"></i><span class="nav-item">Blog</span></li>
+                <hr>
+                <li><i class="fas fa-envelope"></i><span class="nav-item">Contact</span></li>
+                <hr>
+            </ul>
+            <div id="left-footer">FOOT</div>
         </div>
-    </section>
+        <div id="main-right"></div>
+    </div>
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+
 
 </body>
 
