--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>GLaracuente</title>
@@ -16,29 +15,35 @@
 <body>
     <div id="container">
         <div id="left-bar">
-            <img id="profile-pic" src="assets/images/profile_pic.png">
+            <div id="profile-con">
+                <img id="profile-pic" src="assets/images/profile_pic.png">
+                <div id="profile-name">Gerardo Laracuente</div>
+            </div>
             <ul>
-                <li><i class="fas fa-home"></i><span class="nav-item">Home</span></li>
+                <li><span id="home-nav-item" class="nav-item"><i class="lnr lnr-home"></i>Home</span></li>
                 <hr>
-                <li><i class="fas fa-user"></i><span class="nav-item">About Me</span></li>
+                <li><span class="nav-item"><i class="lnr lnr-user"></i>About Me</span></li>
                 <hr>
-                <li><i class="fas fa-file"></i><span class="nav-item">Resume</span></li>
+                <li><span class="nav-item"><i class="lnr lnr-license"></i>Resume</span></li>
                 <hr>
-                <li><i class="fas fa-suitcase"></i><span class="nav-item">Portfolio</span></li>
+                <li><span class="nav-item"><i class="lnr lnr-briefcase"></i>Portfolio</span></li>
                 <hr>
-                <li><i class="fab fa-blogger"></i><span class="nav-item">Blog</span></li>
+                <li><span class="nav-item"><i class="lnr lnr-book"></i>Blog</span></li>
                 <hr>
-                <li><i class="fas fa-envelope"></i><span class="nav-item">Contact</span></li>
+                <li><span class="nav-item"><i class="lnr lnr-envelope"></i>Contact</span></li>
                 <hr>
             </ul>
-            <div id="left-footer">FOOT</div>
+            <div id="left-footer">
+                <a id="linkedin" href="https://www.linkedin.com/in/gerardo-gerry-laracuente-3145a260" target="_blank"><img
+                        id="linkedin" src="assets/images/linkedin.png" title="LinkedIn" alt="linkedin-icon"></a>
+            </div>
         </div>
         <div id="main-right"></div>
     </div>
 
 
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
