--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 
 <body>
     <div id="container">
-        <div id="left-bar">
+        <div id="nav-bar">
             <div id="profile-con">
                 <img id="profile-pic" src="assets/images/profile_pic.png">
                 <div id="profile-name">Gerardo Laracuente</div>
             </div>
+            <div id="mobile-nav-icon"><i class="lnr lnr-menu"></i></div>
             <ul>
                 <li><span id="home-nav-item" class="nav-item"><i class="lnr lnr-home"></i>Home</span></li>
                 <hr>
@@ -33,7 +34,7 @@
                 <li><span class="nav-item"><i class="lnr lnr-envelope"></i>Contact</span></li>
                 <hr>
             </ul>
-            <div id="left-footer">
+            <div id="nav-footer">
                 <a id="linkedin" href="https://www.linkedin.com/in/gerardo-gerry-laracuente-3145a260" target="_blank"><img
                         id="linkedin" src="assets/images/linkedin.png" title="LinkedIn" alt="linkedin-icon"></a>
             </div>
