--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
                 <div id="profile-name"><h5>Gerardo Laracuente</h5></div>
             </div>
             <ul>
-                <li><span value="home" dataid="home-nav-item" class="nav-item"><i class="lnr lnr-home"></i>home</span></li>
-                <li><span value="about me" class="nav-item"><i class="lnr lnr-user"></i>about me</span></li>
-                <li><span value="resume" class="nav-item"><i class="lnr lnr-license"></i>resume</span></li>
-                <li><span value="portfolio" class="nav-item"><i class="lnr lnr-briefcase"></i>portfolio</span></li>
-                <li><span value="blog" class="nav-item"><i class="lnr lnr-book"></i>blog</span></li>
-                <li><span value="contact" class="nav-item"><i class="lnr lnr-envelope"></i>contact</span></li>
+                <li><span data-content="home" id="home-nav-item" class="nav-item"><i class="lnr lnr-home"></i>home</span></li>
+                <li><span data-content="about me" class="nav-item"><i class="lnr lnr-user"></i>about me</span></li>
+                <li><span data-content="resume" class="nav-item"><i class="lnr lnr-license"></i>resume</span></li>
+                <li><span data-content="portfolio" class="nav-item"><i class="lnr lnr-briefcase"></i>portfolio</span></li>
+                <li><span data-content="blog" class="nav-item"><i class="lnr lnr-book"></i>blog</span></li>
+                <li><span data-content="contact" class="nav-item"><i class="lnr lnr-envelope"></i>contact</span></li>
             </ul>
             <div id="mobile-nav">
                 <span id="mobile-name"><h5>Gerardo Laracuente</h5></span>
-                <span value="home" id="home-nav-item" class="nav-item"><i class="lnr lnr-home"></i></span>
-                <span value="about me" class="nav-item"><i class="lnr lnr-user"></i></span>
-                <span value="resume" class="nav-item"><i class="lnr lnr-license"></i></span>
-                <span value="portfolio" class="nav-item"><i class="lnr lnr-briefcase"></i></span>
-                <span value="blog" class="nav-item"><i class="lnr lnr-book"></i></span>
-                <span value="contact" class="nav-item"><i class="lnr lnr-envelope"></i></span>
+                <span data-content="home" id="home-nav-item" class="nav-item"><i class="lnr lnr-home"></i></span>
+                <span valdata-contentue="about me" class="nav-item"><i class="lnr lnr-user"></i></span>
+                <span data-content="resume" class="nav-item"><i class="lnr lnr-license"></i></span>
+                <span data-content="portfolio" class="nav-item"><i class="lnr lnr-briefcase"></i></span>
+                <span data-content="blog" class="nav-item"><i class="lnr lnr-book"></i></span>
+                <span data-content="contact" class="nav-item"><i class="lnr lnr-envelope"></i></span>
             </div>
             <div id="nav-footer">
                 <a id="linkedin" href="https://www.linkedin.com/in/gerardo-gerry-laracuente-3145a260" target="_blank"><img
