--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><span data-content="contact" class="nav-item"><i class="lnr lnr-envelope"></i>contact</span></li>
             </ul>
             <div id="mobile-nav">
-                <span id="mobile-name"><h5>Gerardo Laracuente</h5></span>
+                <span id="mobile-name"><img id="bitmoji-pic" src="assets/images/bitmoji.png"><h6>Gerardo Laracuente</h6></span>
                 <span data-content="home" id="home-nav-item" class="nav-item"><i class="lnr lnr-home"></i></span>
                 <span valdata-contentue="about me" class="nav-item"><i class="lnr lnr-user"></i></span>
                 <span data-content="resume" class="nav-item"><i class="lnr lnr-license"></i></span>
