--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
+        crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -21,7 +21,9 @@
         <div id="nav-bar">
             <div id="profile-con">
                 <img id="profile-pic" src="assets/images/profile_pic.png">
-                <div id="profile-name"><h5>Gerardo Laracuente</h5></div>
+                <div id="profile-name">
+                    <h5>Gerardo Laracuente</h5>
+                </div>
             </div>
             <ul>
                 <li><span data-content="home" id="home-nav-item" class="nav-item"><i class="lnr lnr-home"></i>home</span></li>
@@ -32,7 +34,9 @@
                 <li><span data-content="contact" class="nav-item"><i class="lnr lnr-envelope"></i>contact</span></li>
             </ul>
             <div id="mobile-nav">
-                <span id="mobile-name"><img id="bitmoji-pic" src="assets/images/bitmoji.png"><h6>Gerardo Laracuente</h6></span>
+                <span id="mobile-name"><img id="bitmoji-pic" src="assets/images/bitmoji.png">
+                    <h6>Gerardo Laracuente</h6>
+                </span>
                 <span data-content="home" id="home-nav-item" class="nav-item"><i class="lnr lnr-home"></i></span>
                 <span valdata-contentue="about me" class="nav-item"><i class="lnr lnr-user"></i></span>
                 <span data-content="resume" class="nav-item"><i class="lnr lnr-license"></i></span>
@@ -48,6 +52,16 @@
 
 
         <div id="content">
+            <div id="home"><img id="back-home" src="assets/images/back_home.jpg"></div>
+            <div id="about me"></div>
+            <div id="resume"></div>
+            <div id="blog"></div>
+            <div id="contact"></div>
+
+
+
+
+
             <div id="portfolio">
                 <section>
                     <div class="card" style="width: 16rem;">
