--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </ul>
             <div id="mobile-nav">
                 <span id="mobile-name"><img id="bitmoji-pic" src="assets/images/bitmoji.png">
-                    <h6>Gerardo Laracuente</h6>
+                    <h6></h6>
                 </span>
                 <span data-content="home" id="home-nav-item" class="nav-item"><i class="lnr lnr-home"></i></span>
                 <span valdata-contentue="about me" class="nav-item"><i class="lnr lnr-user"></i></span>
@@ -54,7 +54,7 @@
         <div id="content">
             <div id="home"><img id="back-home" src="assets/images/back_home.jpg"></div>
             <div id="about me"></div>
-            <div id="resume"></div>
+            <div id="resume"><img id="resume" src="assets/images/resume.png"></div>
             <div id="blog"></div>
             <div id="contact"></div>
 
