--- a/index.html
+++ b/index.html
@@ -33,21 +33,22 @@
                 <li><span data-content="blog" class="nav-item"><i class="lnr lnr-book"></i>blog</span></li>
                 <li><span data-content="contact" class="nav-item"><i class="lnr lnr-envelope"></i>contact</span></li>
             </ul>
-            <div id="mobile-nav">
-                <span id="mobile-name"><img id="bitmoji-pic" src="assets/images/bitmoji.png">
-                    <h6></h6>
-                </span>
-                <span data-content="home" id="home-nav-item" class="nav-item"><i class="lnr lnr-home"></i></span>
-                <span valdata-contentue="about me" class="nav-item"><i class="lnr lnr-user"></i></span>
-                <span data-content="resume" class="nav-item"><i class="lnr lnr-license"></i></span>
-                <span data-content="portfolio" class="nav-item"><i class="lnr lnr-briefcase"></i></span>
-                <span data-content="blog" class="nav-item"><i class="lnr lnr-book"></i></span>
-                <span data-content="contact" class="nav-item"><i class="lnr lnr-envelope"></i></span>
-            </div>
             <div id="nav-footer">
                 <a id="linkedin" href="https://www.linkedin.com/in/gerardo-gerry-laracuente-3145a260" target="_blank"><img
                         id="linkedin" src="assets/images/linkedin.png" title="LinkedIn" alt="linkedin-icon"></a>
             </div>
+        </div>
+
+        <div id="mobile-nav">
+            <ul>
+                <li><span id="mobile-name" class="nav-item"><img id="bitmoji-pic" src="assets/images/bitmoji.png"></span></li>
+                <li> <span data-content="home" id="home-nav-item" class="nav-item"><i class="lnr lnr-home"></i></span></li>
+                <li> <span valdata-contentue="about me" class="nav-item"><i class="lnr lnr-user"></i></span></li>
+                <li> <span data-content="resume" class="nav-item"><i class="lnr lnr-license"></i></span></li>
+                <li> <span data-content="portfolio" class="nav-item"><i class="lnr lnr-briefcase"></i></span></li>
+                <li> <span data-content="blog" class="nav-item"><i class="lnr lnr-book"></i></span></li>
+                <li> <span data-content="contact" class="nav-item"><i class="lnr lnr-envelope"></i></span></li>
+            </ul>
         </div>
 
 
