--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
+
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:700|Playfair+Display|Roboto|Rubik+Mono+One|Spicy+Rice"
+        rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/nav.css">
     <link rel="stylesheet" type="text/css" href="assets/css/content.css">
@@ -45,7 +45,7 @@
                 <span data-content="contact" class="nav-item"><i class="lnr lnr-envelope"></i></span>
             </div>
             <div id="nav-footer">
-                <a id="linkedin" href="https://www.linkedin.com/in/gerardo-gerry-laracuente-3145a260" target="_blank"><img
+                <a href="https://www.linkedin.com/in/gerardo-gerry-laracuente-3145a260" target="_blank"><img
                         id="linkedin" src="assets/images/linkedin.png" title="LinkedIn" alt="linkedin-icon"></a>
             </div>
         </div>
@@ -56,7 +56,49 @@
             <div id="about me"></div>
             <div id="resume"><img id="resume" src="assets/images/resume.png"></div>
             <div id="blog"></div>
-            <div id="contact"></div>
+
+
+            <div id="contact">
+                <div id="contact-container">
+                    <div class="card">
+                        <img src="assets/images/phone.png" alt="Phone" style="width:100%">
+                        <div class="container">
+                            <br>
+                            <h5><b>Phone</b></h5>
+                            <p>862-755-1798</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="assets/images/email.png" alt="Email" style="width:100%">
+                        <div class="container">
+                            <br>
+                            <h5><b>Email</b></h5>
+                            <p>GRLaracuente @gmail.com</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="assets/images/location.png" alt="Location" style="width:100%">
+                        <div class="container">
+                            <br>
+                            <h5><b>Location</b></h5>
+                            <p>Jersey City, NJ</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="assets/images/cooler.png" alt="cooler" style="width:100%">
+                        <div class="container">
+                            <br>
+                            <h5><b>Social</b></h5>
+                            <a href="https://www.linkedin.com/in/gerardo-gerry-laracuente-3145a260"
+                                target="_blank"><img id="linkedin-dark" src="assets/images/linkedin_dark.png" title="LinkedIn"
+                                    alt="linkedin-icon"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
 
