--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <span data-content="contact" class="nav-item"><i class="lnr lnr-envelope"></i></span>
             </div>
             <div id="nav-footer">
-                <a href="https://www.linkedin.com/in/gerardo-gerry-laracuente-3145a260" target="_blank"><img
-                        id="linkedin" src="assets/images/linkedin.png" title="LinkedIn" alt="linkedin-icon"></a>
+                <a href="https://www.linkedin.com/in/gerardo-gerry-laracuente-3145a260" target="_blank"><img id="linkedin"
+                        src="assets/images/linkedin.png" title="LinkedIn" alt="linkedin"></a>
             </div>
         </div>
 
@@ -92,9 +92,10 @@
                         <div class="container">
                             <br>
                             <h5><b>Social</b></h5>
-                            <a href="https://www.linkedin.com/in/gerardo-gerry-laracuente-3145a260"
-                                target="_blank"><img id="linkedin-dark" src="assets/images/linkedin_dark.png" title="LinkedIn"
-                                    alt="linkedin-icon"></a>
+                            <a href="https://github.com/glaracuente" target="_blank"><img
+                                    class="social" src="assets/images/github.png" title="Github" alt="github-icon"></a>
+                            <a href="https://www.linkedin.com/in/gerardo-gerry-laracuente-3145a260" target="_blank"><img
+                                    class="social" src="assets/images/linkedin_mini.png" title="LinkedIn" alt="linkedin-icon"></a>
                         </div>
                     </div>
                 </div>
