--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                 <span data-content="contact" class="nav-item"><i class="lnr lnr-envelope"></i></span>
             </div>
             <div id="nav-footer">
+                <a href="https://github.com/glaracuente" target="_blank"><img id="github"
+                        src="assets/images/github_full.png" title="Github" alt="github"></a>
                 <a href="https://www.linkedin.com/in/gerardo-gerry-laracuente-3145a260" target="_blank"><img id="linkedin"
                         src="assets/images/linkedin.png" title="LinkedIn" alt="linkedin"></a>
             </div>
