--- a/index.html
+++ b/index.html
@@ -114,10 +114,11 @@
 
             <div id="resume">
                 <div id="resume-container">
-                    <object data="assets/images/Gerardo_Laracuente_Resume.pdf" type="application/pdf" width="100%"
+                    <object id="pdf-resume" data="assets/images/Gerardo_Laracuente_Resume.pdf" type="application/pdf" width="100%"
                         height="100%">
                         <p><a href="assets/images/Gerardo_Laracuente_Resume.pdf"></a></p>
                     </object>
+                    <img id="png-resume" src="assets/images/resume.png">
                 </div>
             </div>
 
