--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <span data-content="contact" class="nav-item"><i class="lnr lnr-envelope"></i></span>
             </div>
             <div id="nav-footer">
-                <a href="https://github.com/glaracuente" target="_blank"><img id="github"
-                        src="assets/images/github_full.png" title="Github" alt="github"></a>
+                <a href="https://github.com/glaracuente" target="_blank"><img id="github" src="assets/images/github_full.png"
+                        title="Github" alt="github"></a>
                 <a href="https://www.linkedin.com/in/gerardo-gerry-laracuente-3145a260" target="_blank"><img id="linkedin"
                         src="assets/images/linkedin.png" title="LinkedIn" alt="linkedin"></a>
             </div>
@@ -114,8 +114,8 @@
 
             <div id="resume">
                 <div id="resume-container">
-                    <object id="pdf-resume" data="assets/images/Gerardo_Laracuente_Resume.pdf" type="application/pdf" width="100%"
-                        height="100%">
+                    <object id="pdf-resume" data="assets/images/Gerardo_Laracuente_Resume.pdf" type="application/pdf"
+                        width="100%" height="100%">
                         <p><a href="assets/images/Gerardo_Laracuente_Resume.pdf"></a></p>
                     </object>
                     <img id="png-resume" src="assets/images/resume.png">
@@ -127,67 +127,69 @@
 
 
             <div id="portfolio">
-                <section>
-                    <div class="card" style="width: 16rem;">
-                        <img class="card-img-top" src="HW1.png" alt="homework1">
-                        <div class="card-body">
-                            <h5 class="card-title">Homework 1</h5>
-                            <p class="card-text">This assignement was to build a basic portfolio page using HTML
-                                and
-                                CSS.</p>
-                            <a href="Homework1/index.html" class="btn btn-primary">Check it out</a>
+                <div id="portfolio-container">
+                    <h1>Portfolio</h1>
+                    <br>
+                    <div class="card">
+                        <img src="assets/images/word-guess.png" style="width:100%; height: 55%">
+                        <div class="container">
+                            <br>
+                            <h5><b>Reggaeton Artist Name Guess</b></h5>
+                            <a href="https://glaracuente.github.io/Word-Guess-Game/" target="_blank"><img class="social"
+                                    src="assets/images/link-logo.png"></a>
+                            <a href="https://github.com/glaracuente/Word-Guess-Game" target="_blank"><img class="social"
+                                    src="assets/images/code-logo.png"></a>
                         </div>
                     </div>
-                </section>
 
-                <section>
-                    <div class="card" style="width: 16rem;">
-                        <img class="card-img-top" src="bootstrap.jpeg" alt="bootstrap">
-                        <div class="card-body">
-                            <h5 class="card-title">Portfolio page built with Bootstrap</h5>
-                            <p class="card-text">NEED PIC AND DESC</p>
-                            <a href="https://glaracuente.github.io/Bootstrap-Portfolio/" class="btn btn-primary">Check
-                                it out</a>
+                    <div class="card">
+                        <img src="assets/images/street-fighter.png" style="width:100%; height: 55%">
+                        <div class="container">
+                            <br>
+                            <h5><b>Street Fighter Turn Based Fighting</b></h5>
+                            <a href="https://glaracuente.github.io/unit-4-game/" target="_blank"><img class="social"
+                                    src="assets/images/link-logo.png"></a>
+                            <a href="https://github.com/glaracuente/unit-4-game" target="_blank"><img class="social"
+                                    src="assets/images/code-logo.png"></a>
                         </div>
                     </div>
-                </section>
 
-                <section>
-                    <div class="card" style="width: 16rem;">
-                        <img class="card-img-top" src="responsive.jpeg" alt="Responsive">
-                        <div class="card-body">
-                            <h5 class="card-title">Responsive Portfolio</h5>
-                            <p class="card-text">Portfolio page with responsive design via media queries.</p>
-                            <a href="https://glaracuente.github.io/Responsive-Portfolio/" class="btn btn-primary">Check
-                                it out</a>
+                    <div class="card">
+                        <img src="assets/images/friends.png" style="width:100%; height: 55%">
+                        <div class="container">
+                            <br>
+                            <h5><b>Friends Trivia Game</b></h5>
+                            <a href="https://glaracuente.github.io/TriviaGame/" target="_blank"><img class="social"
+                                    src="assets/images/link-logo.png"></a>
+                            <a href="https://github.com/glaracuente/TriviaGame" target="_blank"><img class="social"
+                                    src="assets/images/code-logo.png"></a>
                         </div>
                     </div>
-                </section>
 
-                <section>
-                    <div class="card" style="width: 16rem;">
-                        <img class="card-img-top" src="flag.jpg" alt="Responsive">
-                        <div class="card-body">
-                            <h5 class="card-title">Word Guess Game</h5>
-                            <p class="card-text">Guess that reggaeton artist!</p>
-                            <a href="https://glaracuente.github.io/Word-Guess-Game/" class="btn btn-primary">Check
-                                it
-                                out</a>
+                    <div class="card">
+                        <img src="assets/images/gif.png" style="width:100%; height: 55%">
+                        <div class="container">
+                            <br>
+                            <h5><b>Gifs!</b></h5>
+                            <a href="https://glaracuente.github.io/gif/" target="_blank"><img class="social"
+                                    src="assets/images/link-logo.png"></a>
+                            <a href="https://github.com/glaracuente/gif" target="_blank"><img class="social"
+                                    src="assets/images/code-logo.png"></a>
                         </div>
                     </div>
-                </section>
 
-                <section>
-                    <div class="card" style="width: 16rem;">
-                        <img class="card-img-top" src="rpg.jpg" alt="Responsive">
-                        <div class="card-body">
-                            <h5 class="card-title">Fighter RPG</h5>
-                            <p class="card-text">Get ready to fight!</p>
-                            <a href="https://glaracuente.github.io/unit-4-game/" class="btn btn-primary">Check it
-                                out</a>
+                    <div class="card">
+                        <img src="assets/images/look.png" style="width:100%; height: 55%">
+                        <div class="container">
+                            <br>
+                            <h5><b>Look: Visual Search Engine</b></h5>
+                            <a href="https://glaracuente.github.io/project1/" target="_blank"><img class="social"
+                                    src="assets/images/link-logo.png"></a>
+                            <a href="https://github.com/glaracuente/project1" target="_blank"><img class="social"
+                                    src="assets/images/code-logo.png"></a>
                         </div>
                     </div>
-                </section>
+                </div>
             </div>
 
 
