--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <br>
                     <p>HTML, CSS, JS, jQuery</p>
                     <br>
-                    <p>The biggest challanege was building responsiveness without using any boostrap.</p>
+                    <p>The biggest challenge was building responsiveness without using any boostrap.</p>
                     <br>
                 </div>
             </div>
