--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         technology
                         my whole life. When I was a kid, I used to open up electronics and try to figure out how they
                         worked. That
-                        curiousity is still alive in me today. I love to understand how things work, and it's a big part
+                        curiosity is still alive in me today. I love to understand how things work, and it's a big part
                         of my
                         current job.</p>
                     <br>
