--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <br>
                     <p>HTML, CSS, JS, jQuery</p>
                     <br>
-                    <p>The biggest challenge was building responsiveness without using any boostrap.</p>
+                    <p>The biggest challenge was adding responsiveness without using bootstrap.</p>
                     <br>
                 </div>
             </div>
@@ -90,15 +90,14 @@
                         of my
                         current job.</p>
                     <br>
-                    <p>I'm a Data Center Server Engineer at Outbrain, Inc. The job title doesn't really describe what I
-                        actually do. I use DevOps principles to try to automate all the tasks I'm responsible for.
+                    <p>I'm a Data Center Server Engineer at Outbrain, Inc. I use DevOps principles to automate all the
+                        traditional data center tasks.
                         I get to play around with a lot of great tools (mostly open source) such as Chef, Jenkins,
-                        Prometheus,
-                        Grafana, and Ruby/Bash scripting. </p>
+                        Prometheus, Grafana, and Ruby/Bash scripting. </p>
                     <br>
                     <p>I'm currently learning Full Stack Web Development so I can be a better engineer. The next step
                         for me
-                        is to teach myself level languages such as C++ to get a better understanding of computer
+                        is to teach myself lower level languages such as C++ to get a better understanding of computer
                         science.
                     </p>
                     <br>
@@ -159,10 +158,8 @@
                         <div class="container">
                             <br>
                             <h5><b>Friends Trivia Game</b></h5>
-                            <a href="https://glaracuente.github.io/TriviaGame/" target="_blank"><img class="social"
-                                    src="assets/images/link-logo.png"></a>
-                            <a href="https://github.com/glaracuente/TriviaGame" target="_blank"><img class="social"
-                                    src="assets/images/code-logo.png"></a>
+                            <a href="https://glaracuente.github.io/TriviaGame/" target="_blank"><img class="social" src="assets/images/link-logo.png"></a>
+                            <a href="https://github.com/glaracuente/TriviaGame" target="_blank"><img class="social" src="assets/images/code-logo.png"></a>
                         </div>
                     </div>
 
@@ -171,10 +168,8 @@
                         <div class="container">
                             <br>
                             <h5><b>Gifs!</b></h5>
-                            <a href="https://glaracuente.github.io/gif/" target="_blank"><img class="social"
-                                    src="assets/images/link-logo.png"></a>
-                            <a href="https://github.com/glaracuente/gif" target="_blank"><img class="social"
-                                    src="assets/images/code-logo.png"></a>
+                            <a href="https://glaracuente.github.io/gif/" target="_blank"><img class="social" src="assets/images/link-logo.png"></a>
+                            <a href="https://github.com/glaracuente/gif" target="_blank"><img class="social" src="assets/images/code-logo.png"></a>
                         </div>
                     </div>
 
@@ -183,10 +178,8 @@
                         <div class="container">
                             <br>
                             <h5><b>Look: Visual Search Engine</b></h5>
-                            <a href="https://glaracuente.github.io/project1/" target="_blank"><img class="social"
-                                    src="assets/images/link-logo.png"></a>
-                            <a href="https://github.com/glaracuente/project1" target="_blank"><img class="social"
-                                    src="assets/images/code-logo.png"></a>
+                            <a href="https://glaracuente.github.io/project1/" target="_blank"><img class="social" src="assets/images/link-logo.png"></a>
+                            <a href="https://github.com/glaracuente/project1" target="_blank"><img class="social" src="assets/images/code-logo.png"></a>
                         </div>
                     </div>
                 </div>
