--- a/index.html
+++ b/index.html
@@ -62,14 +62,13 @@
                     <br><br>
                     <p>Portfolio Site of Gerardo Laracuente</p>
                     <br>
-                    <p>I looked to the internet for some design inspiration when building this page.</p>
+                    <p>I looked to the internet for some design inspiration...</p>
                     <br>
-                    <p>Then I took ideas that I liked and challenged myself by trying to build it all from scratch
-                        using:</p>
+                    <p>Then challenged myself by trying to build it from scratch using:</p>
                     <br>
                     <p>HTML, CSS, JS, jQuery</p>
                     <br>
-                    <p>The biggest challenge was adding responsiveness without using bootstrap.</p>
+                    <p>The biggest challenge making it responsiveness without using bootstrap.</p>
                     <br>
                 </div>
             </div>
@@ -90,14 +89,13 @@
                         of my
                         current job.</p>
                     <br>
-                    <p>I'm a Data Center Server Engineer at Outbrain, Inc. I use DevOps principles to automate all the
-                        traditional data center tasks.
+                    <p>I'm a Data Center Server Engineer at Outbrain, Inc. I maintain and monitor over 6,500 servers 
+                        across 3 Data Centers in the US. My daily work is automating as much of this as possible.
                         I get to play around with a lot of great tools (mostly open source) such as Chef, Jenkins,
                         Prometheus, Grafana, and Ruby/Bash scripting. </p>
                     <br>
-                    <p>I'm currently learning Full Stack Web Development so I can be a better engineer. The next step
-                        for me
-                        is to teach myself lower level languages such as C++ to get a better understanding of computer
+                    <p>I'm currently learning Full Stack Web Development in order to become a stronger engineer. The next step
+                        for me is to teach myself lower level languages such as C++ to get a better understanding of computer
                         science.
                     </p>
                     <br>
