--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <br><br>
                     <p>I looked to the internet for some design inspiration...</p>
                     <br>
-                    <p>Then challenged myself by trying to build it from scratch using:</p>
+                    <p>Then challenged myself by trying to build this from scratch using:</p>
                     <br>
                     <p>HTML, CSS, JS, jQuery</p>
                     <br>
