--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <br>
                     <p>HTML, CSS, JS, jQuery</p>
                     <br>
-                    <p>The biggest challenge was making it responsiven, without using bootstrap.</p>
+                    <p>The biggest challenge was making it responsive, without using bootstrap.</p>
                     <br>
                 </div>
             </div>
