--- a/index.html
+++ b/index.html
@@ -87,13 +87,15 @@
                         of my
                         current job.</p>
                     <br>
-                    <p>I'm a Data Center Server Engineer at Outbrain, Inc. I maintain and monitor over 6,500 servers 
+                    <p>I'm a Data Center Server Engineer at Outbrain, Inc. I maintain and monitor over 6,500 servers
                         across 3 Data Centers in the US. My daily work is automating as much of this as possible.
                         I get to play around with a lot of great tools (mostly open source) such as Chef, Jenkins,
                         Prometheus, Grafana, and Ruby/Bash scripting. </p>
                     <br>
-                    <p>I'm currently learning Full Stack Web Development in order to become a stronger engineer. The next step
-                        for me is to teach myself lower level languages such as C++ to get a better understanding of computer
+                    <p>I'm currently learning Full Stack Web Development in order to become a stronger engineer. The
+                        next step
+                        for me is to teach myself lower level languages such as C++ to get a better understanding of
+                        computer
                         science.
                     </p>
                     <br>
@@ -176,6 +178,16 @@
                             <h5><b>Look: Visual Search Engine</b></h5>
                             <a href="https://glaracuente.github.io/project1/" target="_blank"><img class="social" src="assets/images/link-logo.png"></a>
                             <a href="https://github.com/glaracuente/project1" target="_blank"><img class="social" src="assets/images/code-logo.png"></a>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="assets/images/node.png" style="width:100%; height: 55%">
+                        <div class="container">
+                            <br>
+                            <h5><b>Concert,Song</b></h5>
+                            <h5><b>& Movie Search</b></h5>
+                            <a href="https://github.com/glaracuente/liri-node-app" target="_blank"><img class="social" src="assets/images/code-logo.png"></a>
                         </div>
                     </div>
                 </div>
