--- a/index.html
+++ b/index.html
@@ -187,7 +187,19 @@
                             <br>
                             <h5><b>Concert,Song</b></h5>
                             <h5><b>& Movie Search</b></h5>
-                            <a href="https://github.com/glaracuente/liri-node-app" target="_blank"><img class="social" src="assets/images/code-logo.png"></a>
+                            <a href="https://github.com/glaracuente/liri-node-app" target="_blank"><img class="social"
+                                    src="assets/images/code-logo.png"></a>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="assets/images/node.png" style="width:100%; height: 55%">
+                        <div class="container">
+                            <br>
+                            <h5><b>Word Guess</b></h5>
+                            <h5><b>NJ Cities</b></h5>
+                            <a href="https://github.com/glaracuente/node-word-guess-oop" target="_blank"><img class="social"
+                                    src="assets/images/code-logo.png"></a>
                         </div>
                     </div>
                 </div>
