--- a/index.html
+++ b/index.html
@@ -202,6 +202,17 @@
                                     src="assets/images/code-logo.png"></a>
                         </div>
                     </div>
+
+                    <div class="card">
+                        <img src="assets/images/node.png" style="width:100%; height: 55%">
+                        <div class="container">
+                            <br>
+                            <h5><b>bAmazon</b></h5>
+                            <h5><b>Node + Mysql Storefront</b></h5>
+                            <a href="https://github.com/glaracuente/bamazon" target="_blank"><img class="social"
+                                    src="assets/images/code-logo.png"></a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
