--- a/index.html
+++ b/index.html
@@ -213,6 +213,18 @@
                                     src="assets/images/code-logo.png"></a>
                         </div>
                     </div>
+
+                    <div class="card">
+                        <img src="assets/images/node.png" style="width:100%; height: 55%">
+                        <div class="container">
+                            <br>
+                            <h5><b>Friend Finder</b></h5>
+                            <h5><b>Node + Express</b></h5>
+                            <a href="https://desolate-coast-13849.herokuapp.com" target="_blank"><img class="social" src="assets/images/link-logo.png"></a>
+                            <a href="https://github.com/glaracuente/FriendFinder" target="_blank"><img class="social"
+                                    src="assets/images/code-logo.png"></a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
