--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         of my
                         current job.</p>
                     <br>
-                    <p>I'm a Data Center Server Engineer at Outbrain, Inc. I maintain and monitor over 6,500 servers
+                    <p>I'm an Operations Engineer at Outbrain, Inc. I maintain and monitor over 6,300 servers
                         across 3 Data Centers in the US. My daily work is automating as much of this as possible.
                         I get to play around with a lot of great tools (mostly open source) such as Chef, Jenkins,
                         Prometheus, Grafana, and Ruby/Bash scripting. </p>
