--- a/index.html
+++ b/index.html
@@ -162,6 +162,19 @@
                     </div>
 
                     <div class="card">
+                        <img src="assets/images/memory.png" style="width:100%; height: 55%">
+                        <div class="container">
+                            <br>
+                            <h5><b>Memory Game</b></h5>
+                            <h5><b>First React App</b></h5>
+                            <a href="https://secure-cove-62889.herokuapp.com" target="_blank"><img class="social"
+                                    src="assets/images/link-logo.png"></a>
+                            <a href="https://github.com/glaracuente/memory-game" target="_blank"><img class="social"
+                                    src="assets/images/code-logo.png"></a>
+                        </div>
+                    </div>
+
+                    <div class="card">
                         <img src="assets/images/friends.png" style="width:100%; height: 55%">
                         <div class="container">
                             <br>
