fixing name for path project

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                         <img src="assets/images/path.png" style="width:100%; height: 55%">
                         <div class="container">
                             <br>
-                            <h5><b>What's The Move?</b></h5cd>
-                            <h5><b>Full Stack App</b></h5>
+                            <h5><b>Path Train Times</b></h5cd>
+                            <h5><b>React/MongoDB</b></h5>
                             <a href="https://salty-ocean-94125.herokuapp.com" target="_blank"><img class="social" src="assets/images/link-logo.png"></a>
                             <a href="https://github.com/glaracuente/path_project" target="_blank"><img class="social"
                                     src="assets/images/code-logo.png"></a>
