--- a/index.html
+++ b/index.html
@@ -114,10 +114,29 @@
 
 
 
-
             <div id="portfolio">
                 <div id="portfolio-container">
-                    <h1>Portfolio</h1>
+                    <h1>DevOps Projects</h1>
+                    <br>
+                        <div class="card">
+                            <img src="https://github.com/glaracuente/resource_pool_cli/blob/master/img/Arch.png?raw=true" style="width:100%; height: 55%">
+                            <div class="container">
+                                <br>
+                                <h5><b>Resource Pool CLI</b></h5cd>
+                                    <h5><b</b></h5>
+                                    <a href="https://github.com/glaracuente/resource_pool_cli" target="_blank"><img
+                                            class="social" src="assets/images/code-logo.png"></a>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                                <div class="container">
+                                    <br>
+                                    <h5><b>More coming soon</b></h5cd>
+                                </div>
+                            </div>
+                    <br>
+                    <h1>Full Stack Projects</h1>
                     <br>
                     <div class="card">
                         <img src="assets/images/path.png" style="width:100%; height: 55%">
