--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                 <h5><b>React/MongoDB</b></h5>
                                 <a href="https://salty-ocean-94125.herokuapp.com" target="_blank"><img class="social"
                                         src="assets/images/link-logo.png"></a>
-                                <a href="https://github.com/glaracuente/path_project" target="_blank"><img
+                                <a href="https://github.com/glaracuente/PATH_train_app" target="_blank"><img
                                         class="social" src="assets/images/code-logo.png"></a>
                         </div>
                     </div>
@@ -159,7 +159,7 @@
                                 <h5><b>Full Stack App</b></h5>
                                 <a href="https://protected-oasis-76073.herokuapp.com" target="_blank"><img
                                         class="social" src="assets/images/link-logo.png"></a>
-                                <a href="https://github.com/glaracuente/project2" target="_blank"><img class="social"
+                                <a href="https://github.com/glaracuente/Event_planning_app" target="_blank"><img class="social"
                                         src="assets/images/code-logo.png"></a>
                         </div>
                     </div>
@@ -169,9 +169,9 @@
                         <div class="container">
                             <br>
                             <h5><b>Street Fighter Turn Based Fighting</b></h5>
-                            <a href="https://glaracuente.github.io/unit-4-game/" target="_blank"><img class="social"
+                            <a href="https://glaracuente.github.io/Street-Fighter-RPG/" target="_blank"><img class="social"
                                     src="assets/images/link-logo.png"></a>
-                            <a href="https://github.com/glaracuente/unit-4-game" target="_blank"><img class="social"
+                            <a href="https://github.com/glaracuente/Street-Fighter-RPG" target="_blank"><img class="social"
                                     src="assets/images/code-logo.png"></a>
                         </div>
                     </div>
@@ -181,9 +181,9 @@
                         <div class="container">
                             <br>
                             <h5><b>Look: Visual Search Engine</b></h5>
-                            <a href="https://glaracuente.github.io/project1/" target="_blank"><img class="social"
+                            <a href="https://glaracuente.github.io/visual-google-search/" target="_blank"><img class="social"
                                     src="assets/images/link-logo.png"></a>
-                            <a href="https://github.com/glaracuente/project1" target="_blank"><img class="social"
+                            <a href="https://github.com/glaracuente/visual-google-search" target="_blank"><img class="social"
                                     src="assets/images/code-logo.png"></a>
                         </div>
                     </div>
